Fix list view shrinking on mobile and remove hardcoded Javascript truncation

--- a/style.css
+++ b/style.css
@@ -1400,6 +1400,7 @@ select:focus {
 
     .main-layout {
         flex-direction: column;
+        align-items: stretch;
     }
 
     .app-main {
@@ -1407,7 +1408,8 @@ select:focus {
         margin: 0;
     }
 
-    .sidebar {
+    .sidebar,
+    .contentArea {
         width: 100%;
         margin-bottom: 1rem;
     }
